# Orchestrator_v4standalone

./: .cursorignore  .gitignore  AGENTS.md  DEV-STANDALONE.md  README.md  __init__.py  bootstrap.py  bootstrap_smoke.py  proposedpierce_holt.py  pyproject.toml  requirements.txt  run_dev.py  runtime_paths.py
.cursor/plans/: ACTIVE_STAGE_POINTER_PLAN.md  BUTTON_UI_FEEDBACK_PLAN.md  DAILY_DRIVER_PARCHMENT_JOURNAL_PLAN.md  PARCHMENT_FOLLOWUP_LOGS_AND_HANDOFF_PLAN.md  README.md  STAGE_COMPLETION_JUDGE_PLAN.md  fix_datetime.now_core_violation_e1144ab5.plan.md  hybrid-stage-tracking_a0e99380.plan.md  manual_vs_auto_framing_6aa9c4a4.plan.md  ports_typing_hardening_08ea0d49.plan.md  (+5 more)
core/: GEMINI.md  GEMINI.md.bak  __init__.py
docs/: DEBUG_INTERVIEW_CHAT.md  HANDOFF.md  NEXT_SESSION_HANDOFF.md  USER-GUIDE.md  ci pipeline breif.html  karpathy-style-hierarchy-reference.md  monorepo-agents-rescue-checklist.md  proposedgemini_interview_llm_gateway.py  terminal logs.txt
infrastructure/: GEMINI.md  GEMINI.md.bak  __init__.py  runtime_executable_layout.py
orchestrator_v4.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
presentation/: GEMINI.md  GEMINI.md.bak  agent_configuration_routes.py  app.py  gemini_connection_routes.py  gemini_env.py  http_helpers.py  interview_session_routes.py  interview_stage_tracking_settings_routes.py  preflight_frozen.py  prompt_template_routes.py
runtime/: orchestrator.db
tests/: test_core_entities.py  test_stage_progress.py  test_stage_tracking_api_contract.py  test_stage_tracking_settings_use_cases.py  test_stage_tracking_turns.py
(+110 files in other folders)
